--- a/index.html
+++ b/index.html
@@ -8,9 +8,41 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <img src="img/chicken-noodle-soup-created-with-generative-ai-png.webp" alt="">
-    <img src="img/clam-chowder-transparent-background-png.webp" alt="">
-    <img src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
-    <img src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
+    <div class="container-fluid">
+        <div class="row text-center">
+            <div class="col-12">
+                <h1>Soup Hub</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <img class="img" src="img/chicken-noodle-soup-created-with-generative-ai-png.webp" alt="">
+        <div class="col">Picture</div>
+        <div class="col">Name & Description</div>
+        <div class="col">Price</div>
+    </div>
+    <div class="row">
+        <img class="img" src="img/clam-chowder-transparent-background-png.webp" alt="">
+        <div class="col">Picture</div>
+        <div class="col">Name & Description</div>
+        <div class="col">Price</div>
+    </div>
+    <div class="row">
+        <img class="img" src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
+        <div class="col">Picture</div>
+        <div class="col">Name & Description</div>
+        <div class="col">Price</div>
+    </div>
+    <div class="row">
+        <img class="img" src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
+        <div class="col">Picture</div>
+        <div class="col">Name & Description</div>
+        <div class="col">Price</div>
+    </div>
+    
+    <img class="img" src="img/chicken-noodle-soup-created-with-generative-ai-png.webp" alt="">
+    <img class="img" src="img/clam-chowder-transparent-background-png.webp" alt="">
+    <img class="img" src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
+    <img class="img" src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
 </body>
 </html>
