--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Navbar</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -16,33 +16,30 @@
         </div>
     </div>
     <div class="row">
-        <img class="img" src="img/chicken-noodle-soup-created-with-generative-ai-png.webp" alt="">
-        <div class="col">Picture</div>
-        <div class="col">Name & Description</div>
-        <div class="col">Price</div>
+        <img class="col shadow-drop-2-center" src="img/chicken-noodle-soup-created-with-generative-ai-png.webp.png" alt="">
+        <div class="">Picture</div>
+        <div class="">Name & Description</div>
+        <div class="">Price</div>
     </div>
     <div class="row">
-        <img class="img" src="img/clam-chowder-transparent-background-png.webp" alt="">
-        <div class="col">Picture</div>
-        <div class="col">Name & Description</div>
-        <div class="col">Price</div>
+        <img class="col shadow-drop-2-center" src="img/clam-chowder-transparent-background-png.webp" alt="">
+        <div class="">Picture</div>
+        <div class="">Name & Description</div>
+        <div class="">Price</div>
     </div>
     <div class="row">
-        <img class="img" src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
-        <div class="col">Picture</div>
-        <div class="col">Name & Description</div>
-        <div class="col">Price</div>
+        <img class="col shadow-drop-2-center" src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
+        <div class="">Picture</div>
+        <div class="">Name & Description</div>
+        <div class="">Price</div>
     </div>
     <div class="row">
-        <img class="img" src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
-        <div class="col">Picture</div>
-        <div class="col">Name & Description</div>
-        <div class="col">Price</div>
+        <img class="col shadow-drop-2-center" src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
+        <div class="">Picture</div>
+        <div class="">Name & Description</div>
+        <div class="">Price</div>
     </div>
     
-    <img class="img" src="img/chicken-noodle-soup-created-with-generative-ai-png.webp" alt="">
-    <img class="img" src="img/clam-chowder-transparent-background-png.webp" alt="">
-    <img class="img" src="img/miso-soup-with-ai-generated-free-png.webp" alt="">
-    <img class="img" src="img/pngtree-bowl-of-tomato-soup-png-image_6594333.png" alt="">
+
 </body>
 </html>
